--- a/css/partials/responsive.scss
+++ b/css/partials/responsive.scss
@@ -50,6 +50,7 @@ $screen-sm-min: 768px;
   }
   ul#menu-main-menu{
     background: transparent;
+    width:100%;
     li{
       a{
         font-size: 14px;
@@ -65,6 +66,9 @@ $screen-sm-min: 768px;
     top:-30px;
     padding-top: 0;
   }
+  .navbar-default .navbar-collapse{
+    width: 500px;
+  }
   .navbar-header{
     width:100%;
     margin-top: 0;
@@ -74,6 +78,7 @@ $screen-sm-min: 768px;
       width: 25px;
       margin-left: -15px;
     }
+
     .phone-logo{
       visibility: hidden;
       margin-top: 20px;
@@ -133,7 +138,10 @@ $screen-sm-min: 768px;
       }
     }
   }
-
+  .flex{
+    display: flex;
+    justify-content: space-around;
+  }
   .social{
     .socialIcons{
       display: block;
@@ -150,7 +158,7 @@ $screen-sm-min: 768px;
     }
   }
   .carousel-inner{
-    top:0px;
+    top:-35px;
   }
   .caption-wrapper{
     top:-300px;
@@ -338,6 +346,9 @@ $screen-sm-min: 768px;
   }
   .navbar-collapse{
     top:-38px;
+  }
+  .navbar-default .navbar-collapse {
+    width: 580px;
   }
   .caption-wrapper {
     top: -382px;
