updated from live server

--- a/css/partials/footer.scss
+++ b/css/partials/footer.scss
@@ -18,6 +18,7 @@
     .input-lg{
       border-radius: 0;
       border: solid 1px #000;
+      width: 100%;
     }
   }
 
@@ -150,5 +151,13 @@ img.footer-logo-img{
   .nav>li>a:focus, .nav>li>a:hover{
     background: transparent !important;
     color: $rose-pink !important;
+  }
+}
+.footerBottom{
+  p{
+    text-align: center;
+  }
+  a{
+    color: #000;
   }
 }
