--- a/css/partials/main.scss
+++ b/css/partials/main.scss
@@ -26,7 +26,7 @@
     }
   }
 }
-a.btn-main{
+a.btn-main {
   display: block;
   background: #fff;
   border: solid 1px #000;
@@ -52,11 +52,17 @@ a.btn-main{
     border-top: solid 2px #000;
     margin: 0 30px;
   }
+  div:nth-child(3){
+    margin-top:20px;
+  }
   p{
     margin: 10px 0;
     font-weight: 600;
     font-size: 16px;
     line-height: 24px;
+    &:nth-child(4){
+      margin-top:20px;
+    }
   }
 }
 #instagramFeed{
@@ -301,6 +307,12 @@ img.filler{
     margin: 0 30px;
   }
 }
+.form-group{
+  h3{
+    margin:0 0 -15px 0;
+    padding: 0 0 0 0;
+  }
+}
 /*======================================= Catering Page =====================================================*/
 #cateringSection{
   h2{
@@ -354,7 +366,7 @@ img.filler{
   .collection{
     text-align: center;
     padding: 5px;
-    span a{
+    span {
       display: block;
       text-decoration: none;
       text-transform: uppercase;
@@ -365,7 +377,16 @@ img.filler{
     }
   }
 }
-/*========================= TestingArea ===========================*/
-.testArea{
-
+.address{
+  p{
+    text-align: center;
+    font-size: 20px;
+  }
+}
+/*========================= Instagram Area ===========================*/
+#sb_instagram .sb_instagram_header{
+  padding: 26px!important;
+}
+#sb_instagram #sbi_images{
+  padding: 15px!important;
 }
