--- a/style.css
+++ b/style.css
@@ -261,6 +261,10 @@ ul#menu-main-menu li a {
   margin: 0 auto;
 }
 
+.caption {
+  min-height: 60px;
+}
+
 .caption h1 {
   font-family: 'Rochester', cursive;
   text-align: center;
@@ -382,11 +386,19 @@ a.btn-main {
   margin: 0 30px;
 }
 
+#about div:nth-child(3) {
+  margin-top: 20px;
+}
+
 #about p {
   margin: 10px 0;
   font-weight: 600;
   font-size: 16px;
   line-height: 24px;
+}
+
+#about p:nth-child(4) {
+  margin-top: 20px;
 }
 
 #instagramFeed .borderBox {
@@ -652,6 +664,11 @@ img.filler {
   margin: 0 30px;
 }
 
+.form-group h3 {
+  margin: 0 0 -15px 0;
+  padding: 0 0 0 0;
+}
+
 /*======================================= Catering Page =====================================================*/
 #cateringSection h2 {
   text-align: center;
@@ -706,7 +723,7 @@ img.filler {
   padding: 5px;
 }
 
-#cakeGallery .collection span a {
+#cakeGallery .collection span {
   display: block;
   text-decoration: none;
   text-transform: uppercase;
@@ -716,7 +733,20 @@ img.filler {
   margin: 15px 0 0 0;
 }
 
-/*========================= TestingArea ===========================*/
+.address p {
+  text-align: center;
+  font-size: 20px;
+}
+
+/*========================= Instagram Area ===========================*/
+#sb_instagram .sb_instagram_header {
+  padding: 26px !important;
+}
+
+#sb_instagram #sbi_images {
+  padding: 15px !important;
+}
+
 /*================Footer =============*/
 #contact .borderBox {
   border: solid 2px #000;
@@ -738,6 +768,7 @@ img.filler {
 #contact .footerForm .input-lg {
   border-radius: 0;
   border: solid 1px #000;
+  width: 100%;
 }
 
 #connect h2 {
@@ -877,6 +908,14 @@ img.footer-logo-img {
   color: #ff7174 !important;
 }
 
+.footerBottom p {
+  text-align: center;
+}
+
+.footerBottom a {
+  color: #000;
+}
+
 /* responsive settings */
 /* Extra small devices (phones, less than 768px) */
 /* No media query since this is the default in Sass Bootstrap */
@@ -1012,6 +1051,9 @@ img.footer-logo-img {
   .caption-wrapper {
     top: -300px;
   }
+  .caption-wrapper .caption {
+    min-height: 160px;
+  }
   .caption-wrapper .caption h1 {
     font-size: 70px;
   }
@@ -1020,7 +1062,7 @@ img.footer-logo-img {
     max-height: 486px;
   }
   .carousel-control .glyphicon-chevron-left, .carousel-control .glyphicon-chevron-right, .carousel-control .icon-next, .carousel-control .icon-prev {
-    margin-top: -21px;
+    margin-top: -85px;
   }
   #instagramFeed a.btn-main.left {
     float: right;
@@ -1029,7 +1071,7 @@ img.footer-logo-img {
     float: left;
   }
   #contact .borderBox {
-    min-height: 800px;
+    min-height: 1100px;
   }
   img.footer-logo-img {
     margin: 0;
@@ -1159,6 +1201,9 @@ img.footer-logo-img {
   .caption-wrapper {
     top: -382px;
   }
+  .caption-wrapper .caption {
+    min-height: 200px;
+  }
   .caption-wrapper .caption h1 {
     font-size: 90px;
   }
@@ -1205,7 +1250,7 @@ img.footer-logo-img {
     padding: 10px 50px;
   }
   #contact .borderBox {
-    min-height: 850px;
+    min-height: 1150px;
   }
   #contact h2 {
     font-size: 48px;
@@ -1334,6 +1379,9 @@ img.footer-logo-img {
   }
   .caption-wrapper {
     top: -460px;
+  }
+  .caption-wrapper .caption {
+    min-height: 250px;
   }
   .caption-wrapper .caption h1 {
     font-size: 112px;
